--- a/DREAMT/experiments.ipynb
+++ b/DREAMT/experiments.ipynb
@@ -10,9 +10,9 @@
     "import numpy as np\n",
     "import random\n",
     "import warnings\n",
-    "from utils import *\n",
-    "from datasets import *\n",
-    "from models import *\n",
+    "from ML_Dataset.DREAMT.utils import *\n",
+    "from ML_Dataset.DREAMT.datasets import *\n",
+    "from ML_Dataset.DREAMT.models import **\n",
     "\n",
     "warnings.filterwarnings(\"ignore\", category=pd.errors.PerformanceWarning)\n",
     "warnings.filterwarnings(\"ignore\", category=DeprecationWarning)\n",
