--- a/DREAMT/experiments.ipynb
+++ b/DREAMT/experiments.ipynb
@@ -12,7 +12,7 @@
     "import warnings\n",
     "from ML_Dataset.DREAMT.utils import *\n",
     "from ML_Dataset.DREAMT.datasets import *\n",
-    "from ML_Dataset.DREAMT.models import **\n",
+    "from ML_Dataset.DREAMT.models import *\n",
     "\n",
     "warnings.filterwarnings(\"ignore\", category=pd.errors.PerformanceWarning)\n",
     "warnings.filterwarnings(\"ignore\", category=DeprecationWarning)\n",
